# Portal-Kombat

./: README.md
.github/workflows/: auto-assign.yml  daemon.yml
android/app/src/main/java/com/arjunmnath/wifilogger/wifi/: LoginHandler.kt
daemon/: Cargo.toml  Cross.toml  install.sh
daemon/resources/: com.arjunmnath.portalkombatd.plist  portalkombatd.service
daemon/src/: captive.rs  configs.rs  fsm.rs  main.rs
daemon/src/api/: mod.rs  protocol.rs  server.rs  transport.rs
daemon/src/api/platform/: unix.rs  windows.rs
daemon/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
macos/wifiautologin/: ContentView.swift  Untitled.swift  wifiautologinApp.swift
macos/wifiautologin.xcodeproj/: project.pbxproj
macos/wifiautologin.xcodeproj/project.xcworkspace/xcuserdata/arjunmnath.xcuserdatad/: UserInterfaceState.xcuserstate
macos/wifiautologin.xcodeproj/xcuserdata/arjunmnath.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/wifiautologinTests/: wifiautologinTests.swift
macos/wifiautologinUITests/: wifiautologinUITests.swift  wifiautologinUITestsLaunchTests.swift
unix-daemon/: Cargo.toml  README.md
unix-daemon/resources/: com.arjunmnath.portalkombatd.plist  com.example.wifidaemon.plist  portalkombatd.service  wifi-captive-daemon.service
unix-daemon/src/: captive.rs  configs.rs  event.rs  fsm.rs  main.rs
unix-daemon/src/platform/: macos.rs  mod.rs
